--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "나 천재."
   location         : "대한민국, 서울"
-  email            :hahyunseung71@gmail.com
+  email            :"hahyunseung71@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
