--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "하현승"
-  avatar           : # path of avatar image, e.g. "/assets/images/sksk.jpg"
+  avatar           : # path of avatar image, e.g. "/assets/images/jiji.jpg"
   bio              : "나 천재."
   location         : "대한민국, 서울"
   email            : "hahyunseung71@gmail.com"
